tests/sksl/errors/Ossfuzz38560.glsl
### Compilation failed:

error: 1: symbol 'r' was already defined
error: 1: variable 's' must be created in a scope
2 errors
